espresso (0.99.11) UNRELEASED; urgency=low

  * Stop auto-hiding the panel when running the GTK frontend.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 15 Feb 2006 10:04:25 +0000

espresso (0.99.10) dapper; urgency=low

  * Move the installation progress bar and the final message to separate
    windows, per https://wiki.ubuntu.com/UbuntuExpress/GnomeUserInterface.
  * Remove all the screenshots. We'll replace these with an animated demo
    when that's ready.
  * Avoid broken-image icons if logo or photo images aren't available.
  * Hardcode a list of valid debconf commands in debconffilter and ignore
    any we don't recognise. Works around most problems with multi-line
    commands in partman for now.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 14 Feb 2006 21:58:54 +0000

espresso (0.99.9) dapper; urgency=low

  * Drop on_key_press handler from GTK frontend; setting has_default on the
    Next button is cleaner, and having both that and a keypress handler
    breaks things.
  * Add a non-blocking mode to debconffilter, and watch the filter's input
    from the GTK main loop. This allows the GTK user interface to update
    while waiting for debconf commands.
  * Log errors from user-setup-apply and grub-installer, although for now
    it's unnecessarily painful to actually display them to the user.
  * Reduce log noise in configuration stage.
  * Try to disable gnome-volume-manager's automounting while mounting
    partitions.
  * Use the new stdio control interface in gparted 0.1-0ubuntu2 to apply
    changes when going forward from the manual partitioning screen, undo
    changes when going backward, and clean up gparted properly in either
    case. Make sure to relaunch gparted when required, as we can now launch
    it more than once.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 14 Feb 2006 16:06:00 +0000

espresso (0.99.8) dapper; urgency=low

  * Use new target-config hooks from espresso-casper rather than copying